Add getters for English and Indonesian words in Vocabulary; update DictionaryViewModel to use these getters